//==============================================================================
//  @file       sql_store_smurf.proto
//  @ingroup    proto database interface
//  @brief		Operations on store
//
//  Messages for storage
//
//  @author     Bart Houkes
//
//------------------------------------------------------------------------------
//  Copyright (c) Bart Houkes, 25-12-2023
//
//  Copyright notice:
//  This software is property of Bart Houkes.
//  Unauthorized duplication and disclosure to third parties is forbidden.
//============================================================================*/

syntax = "proto3";

option csharp_namespace = "store";

package smurf;

import "common_types.proto";

// Add these Kotlin-specific options
option java_multiple_files = true;
option java_package = "com.hha.store.smurf";

service storeSmurfService
{
    rpc AddOrGetSmurf(DangerName) returns (common.StoreSmurf) {}
    rpc AddQuantity(SmurfQuantity) returns (common.Empty) {}
    rpc CalculateFirstDay(StoreSmurfId) returns (common.Empty) {};
    rpc CalculateSoldOutDates(StoreSmurfId) returns (common.Empty) {}
    rpc CalculateTotalSold(StoreSmurfId) returns (common.Empty) {}
    rpc CalculateTotalStock(StoreSmurfId) returns (common.Empty) {}
    rpc CalculateUsagePerYear(StoreSmurfId) returns (common.Empty) {}
    rpc RemoveSmurf(StoreSmurfId) returns (common.Empty) {}
    rpc SetSearchString(SearchName) returns (StoreSmurfList) {}
    rpc UpdateQuantity(TotalStoreSmurf) returns (common.Empty) {}
}

message DangerName
{
    int32 danger_level = 1;
    string name = 2;
}

message GetSmurfRequest
{
    StoreSmurfId  store_smurf_id = 1;
    string        name = 2;
}

message SearchName
{
    string name = 1;
}

message SmurfQuantity
{
    int32 smurf_id = 1;
    int32 quantity = 2;
}

message StoreSmurfId
{
    int32 store_smurf_id = 1;
}

message StoreSmurfList
{
    repeated common.StoreSmurf smurf = 1;
}

message TotalStore
{
	int32   prepared =2;
	int32 	input =3;
	int32	ordered =4;
	int32	delivered =5;
	int32	late =6;
	int32	cancelled =7;
}

message TotalStoreSmurf
{
	int32 smurf_id = 1;
	TotalStore totals = 2;
}

